# lambdem-poker

./: .ghci  README.md  lambdem-poker.cabal
app/: LambdemPoker.hs  Main.hs
docs/: description.md  game rules.md
docs/lambdem-poker-0.6/: Client.html  Poker-AI-Engine.html  Poker-AI-PlayStyles.html  Poker-AI-Ranges.html  Poker-AI-Types.html  Poker-Interface-Handlers.html  Poker-Interface-Loader.html  Poker-Interface-Offsets.html  Poker-Interface-Renderer.html  Poker-Interface-Types.html  Poker-Logic-Calculations.html  Poker-Logic-Dealer.html  Poker-Logic-Trading.html  Poker-Logic-Types-Cards.html  Poker-Logic-Types-Game.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  (+3 more)
docs/lambdem-poker-0.6/src/: Client.html  Poker.AI.Engine.html  Poker.AI.PlayStyles.html  Poker.AI.Ranges.html  Poker.AI.Types.html  Poker.Interface.Handlers.html  Poker.Interface.Loader.html  Poker.Interface.Offsets.html  Poker.Interface.Renderer.html  Poker.Interface.Types.html  Poker.Logic.Calculations.html  Poker.Logic.Dealer.html  Poker.Logic.Trading.html  Poker.Logic.Types.Cards.html  Poker.Logic.Types.Game.html
range selector/: index.html
range selector/scripts/: calculations.js  handlers.js  interface.js  main.js
range selector/styles/: default.css
src/: Client.hs  LambdemPoker.hs
src/Interface/: Renderer.hs  TableScreen.hs
src/Poker/AI/: Engine.hs  PlayStyles.hs  Ranges.hs  Types.hs
src/Poker/AI/Range selector/: index.html
src/Poker/AI/Range selector/scripts/: handlers.js  interface.js  main.js
src/Poker/AI/Range selector/styles/: default.css
src/Poker/Interface/: Handlers.hs  Loader.hs  Offsets.hs  Renderer.hs  Types.hs
src/Poker/Logic/: Calculations.hs  Dealer.hs  Trading.hs  Types.hs
src/Poker/Logic/Types/: Cards.hs  Game.hs
test/: Test.hs
