name:                lambdem-poker
version:             0.1
synopsis:            Poker client
-- description:
homepage:            https://github.com/cmc-haskell-2018/lambdem-poker
license:             PublicDomain	
license-file:        UNLICENSE
author:              Artem Bondar
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     LambdemPoker
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lambdem-poker
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdem-poker
  default-language:    Haskell2010

test-suite lambdem-poker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lambdem-poker
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2017/demo-char-panel
