name:                lambdem-poker
version:             0.5
synopsis:            Poker client
-- description:
homepage:            https://github.com/cmc-haskell-2018/lambdem-poker
license:             PublicDomain	
license-file:        UNLICENSE
author:              Artem Bondar
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-type-defaults
  exposed-modules:     
    Client
    Poker.AI.Engine
    Poker.AI.Types
    Poker.Interface.Handlers
    Poker.Interface.Loader
    Poker.Interface.Offsets
    Poker.Interface.Renderer
    Poker.Interface.Types
    Poker.Logic.Calculations
    Poker.Logic.Dealer
    Poker.Logic.Trading
    Poker.Logic.Types
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , gloss-juicy
                     , random
  default-language:    Haskell2010

executable poker
  hs-source-dirs:      app
  main-is:             LambdemPoker.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdem-poker
  default-language:    Haskell2010

test-suite poker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambdem-poker
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cmc-haskell-2018/lambdem-poker
